QWindows11Style: Use absolute Slider positioning

WinUI3 changed the behavior of Sliders by not using steps anymore but
by absolute change.

Fixes: QTBUG-125154
Pick-to: 6.7.1
Change-Id: I708f2584432b277b0c1fc0b2587137ce71714e69
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit 392c5fab815cbe41df9e25e50e4d296e7e1606f6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>